--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,6 +22,7 @@ body {
   max-width: 1230px;
   height: 100%;
   margin: 0 auto;
+  padding: 0 7px;
 }
 
 .logo img {
@@ -73,11 +74,13 @@ body {
 }
 
 .banner-item {
-  background-image: url(./images/main/banner.jpg);
+  background-image: url(./images/main/banner-img.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center right;
   padding: 68px;
   border-radius: 10px;
-  background-size: cover;
-  background-position: right;
+  background-color: #FFF1B8;
 }
 
 .banner-item--title {
@@ -277,5 +280,29 @@ body {
   font-size: 20px;
   font-weight: 700;
   line-height: 32px;
+}
+
+@media (max-width: 991px) {
+  .banner-item {
+      background-image: none;
+  }
+
+  .banner-item--title {
+      max-width: 100%;
+  }
+
+  .banner-item--subtitle {
+      max-width: 100%;
+  }
+
+  .products-card {
+      width: calc((100% - 24px) / 2);
+  }
+}
+
+@media (max-width: 768px) {
+  .products-card {
+      width: 100%;
+  }
 }
 
